test/bad/dictionaries/dict05.px

{1: true, false: 0}
